+ music/harmonics.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-__MACOSX
+__MACOSX/
 .DS_Store
 .idea/
 *.pyc
 *~
-node_modules/
+/.vscode/
+/node_modules/
+/track/bin/
+/track/main
+/track/track.sqlite
+/vendor/
 Thumbs.db
-track/bin/
-track/main
-track/track.sqlite
-vendor/
